added arial label

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -73,7 +73,7 @@ import { Icon } from 'astro-icon'
         <LaunchButton url='https://calireads.org/modules/ARGuides/arg-full-program/content/' />
       <h4>Anticipation Reaction Guides has 2 sections:</h4>
           {ARGData.map(ARG => (
-            <HTMLButton title={ARG.title} url={ARG.url} buttonText={ARG.buttonText}/>
+            <HTMLButton title={ARG.title} url={ARG.url} aria-label={ARG.title} buttonText={ARG.buttonText}/>
       
       ))}
       </ul>
@@ -99,7 +99,7 @@ import { Icon } from 'astro-icon'
           <ul class="column-list"> 
             {ARGResources.map(ARGResource => (
             
-              <li><a href={ARGResource.url} title={ARGResource.title+' '+ARGResource.altText}>{ARGResource.title}</a> 
+              <li><a href={ARGResource.url} title={ARGResource.title+' '+ARGResource.altText} arial-label={ARGResource.title}>{ARGResource.title}</a> 
                 <Icon name={ARGResource.name} alt={ARGResource.altText} title={ARGResource.altText} /></li>
             ))}
           </ul>
@@ -119,7 +119,7 @@ import { Icon } from 'astro-icon'
           <h4>The GtG course has 2 sections: </h4>
     <ul >
       {GTGData.map(GTG => (
-        <HTMLButton title={GTG.title} url={GTG.url} buttonText={GTG.buttonText}/>
+        <HTMLButton title={GTG.title} url={GTG.url} aria-label={GTG.title} buttonText={GTG.buttonText}/>
         
         
         ))} 
@@ -152,7 +152,7 @@ import { Icon } from 'astro-icon'
         <h3 >Get The Gist Resources</h3>
             <ul class="column-list"> 
               {GTGResources.map(GTGResources => (
-                <li><a href={GTGResources.url} title={GTGResources.title+' '+GTGResources.altText}>{GTGResources.title}</a> 
+                <li><a href={GTGResources.url} title={GTGResources.title+' '+GTGResources.altText} aria-label={GTGResources.title}>{GTGResources.title}</a> 
                 <Icon name={GTGResources.name} alt={GTGResources.altText} title={GTGResources.altText} /></li>
               ))}
             </ul>
@@ -180,7 +180,7 @@ import { Icon } from 'astro-icon'
      
           <ul>
             {MorphData.map(morph => (
-              <HTMLButton title={morph.title} url={morph.url} buttonText={morph.buttonText}/>
+              <HTMLButton title={morph.title} url={morph.url} arial-label={morph.title} buttonText={morph.buttonText}/>
               
               ))}
           </ul>
@@ -214,7 +214,7 @@ import { Icon } from 'astro-icon'
         <h3> Morphology Resources</h3>
         <ul class="column-list">
           {MorphResources.map(MorphResource =>(
-            <li><a href={MorphResource.url} title={MorphResource.title+' '+MorphResource.altText}>{MorphResource.title}</a>
+            <li><a href={MorphResource.url} title={MorphResource.title+' '+MorphResource.altText} aria-label={MorphResource.title}>{MorphResource.title}</a>
               <Icon name={MorphResource.name} alt={MorphResource.altText} title={MorphResource.altText} /> </li>
           ))}
          </ul>
@@ -241,7 +241,7 @@ import { Icon } from 'astro-icon'
          
           <ul>
             {RTData.map(rt => (
-              <HTMLButton title={rt.title} url={rt.url} buttonText={rt.buttonText}/>
+              <HTMLButton title={rt.title} url={rt.url} aria-label={rt.title} buttonText={rt.buttonText}/>
            
             
             ))}
@@ -267,7 +267,7 @@ import { Icon } from 'astro-icon'
               <div class="content">
                 <ul class="column-list">
                   {RTOverview.map(RTOverview =>(
-                    <li><a href={RTOverview.url} title={RTOverview.title+' '+RTOverview.altText}>{RTOverview.title}</a>
+                    <li><a href={RTOverview.url} title={RTOverview.title+' '+RTOverview.altText} aria-label={RTOverview.title}>{RTOverview.title}</a>
                       <Icon name={RTOverview.name}  alt={RTOverview.altText} title={RTOverview.altText} /></li>
                   ))}
                  </ul>
@@ -281,7 +281,7 @@ import { Icon } from 'astro-icon'
               <div class="content">
                 <ul class="column-list">
                   {RTSummary.map(RTSummary =>(
-                    <li><a href={RTSummary.url} title={RTSummary.title+' '+RTSummary.altText}>{RTSummary.title}</a>
+                    <li><a href={RTSummary.url} title={RTSummary.title+' '+RTSummary.altText} aria-label={RTSummary.title}>{RTSummary.title}</a>
                       <Icon name={RTSummary.name}  alt={RTSummary.altText} title={RTSummary.altText} /></li>
                   ))}
                  </ul>
@@ -295,7 +295,7 @@ import { Icon } from 'astro-icon'
               <div class="content">
                 <ul class="column-list">
                   {RTQuestioning.map(RTQuestioning =>(
-                    <li><a href={RTQuestioning.url} title={RTQuestioning.title+' '+RTQuestioning.altText}>{RTQuestioning.title}</a>
+                    <li><a href={RTQuestioning.url} title={RTQuestioning.title+' '+RTQuestioning.altText} aria-label={RTQuestioning.title}>{RTQuestioning.title}</a>
                       <Icon name={RTQuestioning.name} alt={RTQuestioning.altText} title={RTQuestioning.altText} /></li>
                   ))}
                  </ul>
@@ -310,7 +310,7 @@ import { Icon } from 'astro-icon'
               <div class="content">
                 <ul class="column-list">
                   {RTPredicting.map(RTPredicting =>(
-                    <li><a href={RTPredicting.url} title={RTPredicting.title+' '+RTPredicting.altText}>{RTPredicting.title}</a>
+                    <li><a href={RTPredicting.url} title={RTPredicting.title+' '+RTPredicting.altText} aria-label={RTPredicting.title}>{RTPredicting.title}</a>
                       <Icon name={RTPredicting.name} alt={RTPredicting.altText} title={RTPredicting.altText} /></li>
                   ))}
                  </ul>
@@ -324,7 +324,7 @@ import { Icon } from 'astro-icon'
               <div class="content">
                 <ul class="column-list">
                   {RTClarifying.map(RTClarifying =>(
-                    <li><a href={RTClarifying.url} title={RTClarifying.title+' '+RTClarifying.altText}>{RTClarifying.title}</a>
+                    <li><a href={RTClarifying.url} title={RTClarifying.title+' '+RTClarifying.altText} aria-label={RTClarifying.title}>{RTClarifying.title}</a>
                       <Icon name={RTClarifying.name} alt={RTClarifying.altText} title={RTClarifying.altText} /></li>
                   ))}
                  </ul>              
@@ -394,7 +394,7 @@ import { Icon } from 'astro-icon'
       <LaunchButton url='http://calireads.org/modules/vocabularyMaps/vocabMaps-full-program/content/'/>
       <ul>
         {vocabData.map(vocab => (
-          <HTMLButton title={vocab.title} url={vocab.url} buttonText={vocab.buttonText}/>
+          <HTMLButton title={vocab.title} url={vocab.url} aria-label={vocab.title} buttonText={vocab.buttonText}/>
         ))}
       </ul>
       </div>
@@ -414,7 +414,7 @@ import { Icon } from 'astro-icon'
         <h3 >Vocabulary Maps Resources</h3>
         <ul class="column-list">
           {vocabResources.map(vocabResource=>(
-            <li><a href={vocabResource.url} title={vocabResource.title+' '+vocabResource.altText}>{vocabResource.title}</a>
+            <li><a href={vocabResource.url} title={vocabResource.title+' '+vocabResource.altText} aria-label={vocabResource.title}>{vocabResource.title}</a>
               <Icon name={vocabResource.name} alt={vocabResource.altText} title={vocabResource.altText} /></li>
           ))}
         </ul>
@@ -444,7 +444,7 @@ import { Icon } from 'astro-icon'
         <h4>The WordBuilder Intervention course has 4 sections:</h4>
        <ul>
         {wbData.map(wordbuilder => (
-          <HTMLButton title={wordbuilder.title} url={wordbuilder.url} buttonText={wordbuilder.buttonText}/>
+          <HTMLButton title={wordbuilder.title} url={wordbuilder.url} aria-label={wordbuilder.title} buttonText={wordbuilder.buttonText}/>
      
     ))}
        </ul>
@@ -470,7 +470,7 @@ import { Icon } from 'astro-icon'
       <h3>Wordbuilder Resources</h3>
         <ul class="column-list">
             {wbResources.map(wbResource =>(
-              <li><a href={wbResource.url} title={wbResource.title+' '+wbResource.altText}>{wbResource.title}</a>
+              <li><a href={wbResource.url} title={wbResource.title+' '+wbResource.altText} aria-label={wbResource.title}>{wbResource.title}</a>
                 <Icon name={wbResource.name} alt={wbResource.altText} title={wbResource.altText} /></li>
             ))}
         </ul>
