fixes to readability

--- a/src/components/LaunchButton.astro
+++ b/src/components/LaunchButton.astro
@@ -3,15 +3,15 @@
 
 const { title,  url,  buttonText, addText } = Astro.props 
 ---
-
-
-  <li>
-    <a href={url} title={} >
+<ul>
+<li>
+    <a href={url} title={title} >
        <button class="btn-9">
           Start The Course &gt;&gt;
        </button>
       </a>
   </li>
+</ul>
 
   <style>
    
