added training webinars

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -85,10 +85,12 @@ import { Icon } from 'astro-icon'
     </article>
     <div class='media-button-container'>
       <div>
-        <MediaButton title="Anticipation Reaction Guides Training Webinar" url={'https://vimeo.com/showcase/10308780'}/>
+        <MediaButton title='Anticipation Reaction Guides Overview Webinar' url={'https://vimeo.com/461923212'} />    
       </div>
-      
+      <div>
+        <MediaButton title="Anticipation Reaction Guides Training Webinar" url={'https://vimeo.com/showcase/10308780'} />
       </div>
+     </div>
    
     <aside class="aside aside-1"> 
       <div class='imgHolder'> 
@@ -366,7 +368,13 @@ import { Icon } from 'astro-icon'
       </div>
     </article>
     <div class='media-button-container'>
-      <MediaButton title='Self-Generated Questions Demonstration Videos' url='https://vimeo.com/showcase/10308765'/>
+        <div>
+          <MediaButton title="Self-Generated Questions Webinar" url="https://vimeo.com/showcase/8527123/video/706611361" />  
+        </div>    
+        <div>
+          <MediaButton title='Self-Generated Questions Demonstration Videos' url='https://vimeo.com/showcase/10308765'/>
+          </div>    
+ 
     </div>
       <footer class='footer'>
         <h4>Self-Generated Questions Resources</h4>
