vicki revisions. Added resources to fron page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,8 +21,7 @@ import cdeImg from '../images/CDE_green-border.png';
     </div>
     <div >
       <p>
-          The contents of this website were developed under a State Personnel Development Grant (SPDG) from the US Department of Education (CALI/Award #H323A170011), Project Officer, david.guardino@ed.gov. However, the contents of this site not necessarily represent the policy of the US Department of Education and no assumption of endorsement by the Federal government should be made.
-      </p>
+        The contents of this website were developed under a State Personnel Development Grant (SPDG) from the US Department of Education (CALI/Award #H323A170011), Project Officer, david.guardino@ed.gov. However, the contents of this site do not necessarily represent the policy of the US Department of Education and no assumption of endorsement by the Federal government should be made.      </p>
       
     </div>
   </footer>
