--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -68,7 +68,7 @@ import { Icon } from 'astro-icon'
     </header>
     <article class="main">
       <div class="flex-container">
-      <p>The ARG is a routine using an advanced organizer to prompt student thinking about key topics before reading, to document related text evidence during reading, and to reconsider opinions of key topics after reading based on documented evidence. This course demonstrates how to plan and implement instruction of the Anticipation-Reaction Guides (ARGs) to support students’ reading comprehension. </p>
+      <p>The ARG routine uses an advanced organizer to prompt students to think about key topics before reading, to record related text evidence during reading, and to reconsider their opinions of key topics after reading based on text evidence. This course demonstrates how to plan and implement instruction of the ARG to support students’ reading comprehension. </p>
      
         <LaunchButton url='https://calireads.org/modules/ARGuides/arg-full-program/content/' />
       
@@ -409,6 +409,9 @@ import { Icon } from 'astro-icon'
       </ul>
       </div>
       </article>
+      <div class="media-button-container">
+      <MediaButton title="Vocabulary Maps  Webinar" url={"https://vimeo.com/ 706281734"} />
+      </div>
       <!--
         <aside class='aside aside-2'>
         {vocabData.map(vocab => (
@@ -436,7 +439,7 @@ import { Icon } from 'astro-icon'
   
     <div class="module-wrapper">
       <header class='mod-header'>
-        <h2>Wordbuilder Course</h2>
+        <h2>Wordbuilder Intervention Course</h2>
       </header>
       
       <aside class='aside aside-1'>
