--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,10 +18,13 @@ import { Icon } from 'astro-icon';
 <section class="page-content">
     <div class="container" id="features">
       
-      <h2>Literacy Strategies</h2>
+      <h2>Featured Literacy Strategies</h2>
       <p>
-        CALI Reads is proud to offer seven free Adolescent Literacy E-Learning courses for professional learning. Each course showcases a research-based literacy practice that has been shown to be effective with adolescent learners across content area instruction. Each course takes approximately 2-3 hours to complete. Use the CALI Reads Training courses to learn how to implement each evidence-based practice across content area instruction to support adolescent literacy. You can make a difference! Get started today! 
+        The CALI Reads project features 7 research-based literacy practices proven to be effective for adolescent students across content area instruction. The project’s professional learning resources are designed to support educators in implementing these research-based practices. Resources include asynchronous e-Learning courses, training webinars, classroom demonstration videos, and the web-based WordBuilder Intervention tool.
       </p> 
+      <p>By engaging with these learning resources, educators can gain a deeper understanding of effective literacy practices and how to apply them in their content area instruction. The asynchronous e-Learning courses and training webinars offer flexibility in terms of time and pacing, allowing educators to learn at their own convenience. The classroom demonstration videos provide real-world examples of these practices in action, offering practical insights and ideas for implementation. Additionally, the web-based WordBuilder Intervention tool can support individualized instruction and intervention for students needing targeted literacy support. </p>
+
+      <p>Indeed, the CALI Reads resources will prove to be an invaluable asset to anyone seeking to enhance educational opportunities for students. Whether you are an educator, administrator, or an individual passionate about promoting literacy and educational success, these resources provide a wealth of knowledge, strategies, and tools to support effective instruction.</p>
       
       <Features />
       
