--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,23 +4,37 @@ export interface Props {
 title: string;
 body: string;
 url: string;
-url2:string;
+module: string;
+demoVid: string;
+trainVid: string;
+intervention:string;
+
 dark?: boolean;
 
 }
 
-const { title, body, url,  dark = false } = Astro.props as Props
+const { title, body, url, module, demoVid, trainVid, intervention,  dark = false } = Astro.props as Props
+
+import Button32 from './Button32.astro';
+
+
 ---
 
 <div class={`card ${dark && 'dark'}`}>
-<h3><a href={url} >{title}</a></h3>
-<p>{body}</p>
-
+  <h3><!--<a href={url} >-->{title}<!--</a>--></h3>
+  <p>{body}</p>
+    <div class="resources">
+      <Button32 title={title +" Course"} url={module} />
+      <Button32 title={title +" Demonstration Videos"} url={demoVid} />
+      <Button32 title={title +" Training Webinars"} url={trainVid} />
+      <Button32 title={title +" Intervention Tool"} url={intervention} />
+    </div>
 </div>
 <style>
 
 .card {
   background: var(--color-primary);
+ 
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -41,5 +55,24 @@ const { title, body, url,  dark = false } = Astro.props as Props
     color: var(--color-primary);
 }
 
+.resources{
+  display:flex;
+  align-content: flex-start;
+  justify-content: flex-start;
+  background-color:#17577B;
+  position: relative;
+  bottom:0px;
+}
+
+.resources ul li{
+  display: inline;
+  line-height: 130%;
+}
+
+
+.hidden {
+    display: none;
+}
 
 </style>
+
