--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -59,7 +59,7 @@ import Button32 from './Button32.astro';
   display:flex;
   align-content: flex-start;
   justify-content: flex-start;
-  background: color #17577b !important;;
+  background: #17577B;
   position: relative;
   bottom:0px;
 }
