--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -57,8 +57,8 @@ import Button32 from './Button32.astro';
 
 .resources{
   display:flex;
- 
-  justify-content: flex-start;
+ justify-items: center;
+  justify-content: space-evenly;
   background-color: #17577B;
   position: relative;
   bottom:0px;
