edits to front page images sizes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="logo">
       <a href="/index.html">
-        <img src={logo} alt="CALI Reads" />
+        <img src={logo} alt="CALI Reads" width="240px" />
       </a>
     </div>
     <!--Nav Bar Responsive -->
@@ -24,7 +24,6 @@
         <li class="nav-item"><a class="nav-link" href='/index.html#features'>Literacy Strategies</a></li>
         <li class="nav-item"><a class="nav-link" href="https://calireads.org/wordbuilder/" target="_blank">Wordbuilder Intervention</a></li>
         <li class="nav-item"><a class="nav-link" href="/literacy-modules">E-Learning Courses</a></li>
-        <!--<li class="nav-item"><a class="nav-link" href='/digiCoach/'>digiCoach</a></li> -->
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
       </ul>
