--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -22,7 +22,6 @@ showExtra = true } = Astro.props as Props;
 
     <div class="showcase-text">
               <h1>{heading}</h1>
-              <!--<p class='tagline'>{tagline}</p> -->
     </div>
 
     {showExtra && <> 
@@ -95,5 +94,10 @@ showExtra = true } = Astro.props as Props;
       color: #fff;
       text-align: center;
       font-weight: 300;
+    }
+
+    .logos{
+      width:auto;
+      height:auto;
     }
     </style>
