--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="logo">
       <a href="/index.html">
-        <img src={logo} alt="CALI Reads" width="200px" height="33px" />
+        <img class='imgLogo' src={logo} alt="CALI Reads"  />
       </a>
     </div>
     <!--Nav Bar Responsive -->
@@ -51,7 +51,8 @@
 }
 
 .header img {
-  height: 35px;
+  width: 200px;
+height: auto;
   vertical-align: middle;
 }
 .navbar {
