edits to content

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -367,7 +367,7 @@ import { Icon } from 'astro-icon'
     </article>
     <div class='media-button-container'>
         <div>
-          <MediaButton title="Self-Generated Questions Webinar" url="https://vimeo.com/showcase/8527123/video/706611361" />  
+          <MediaButton title="Self-Generated Questions Training Webinar" url="https://vimeo.com/showcase/8527123/video/706611361" />  
         </div>    
         <div>
           <MediaButton title='Self-Generated Questions Demonstration Videos' url='https://vimeo.com/showcase/10308765'/>
@@ -410,7 +410,7 @@ import { Icon } from 'astro-icon'
       </div>
       </article>
       <div class="media-button-container">
-      <MediaButton title="Vocabulary Maps  Webinar" url={"https://vimeo.com/ 706281734"} />
+      <MediaButton title="Vocabulary Maps Training Webinar" url={"https://vimeo.com/ 706281734"} />
       </div>
       <!--
         <aside class='aside aside-2'>
