--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -33,7 +33,7 @@ showExtra = true } = Astro.props as Props;
     </div>
 
     <p class="showcase-demo">
-      <small>The CALI Reads project is dedicated to empowering educators to deliver high-quality instruction and improve literacy outcomes for diverse students. By providing free access to instructional resources, CALI Reads ensures that all educators, regardless of financial constraints, can benefit from the research-based strategies and practices presented. We encourage anyone interested in supporting adolescent literacy to explore and use the free learning resources available to the public through this website. </small></p>
+      <small>The CALI Reads project is dedicated to empowering educators to deliver high-quality instruction and improve literacy outcomes for diverse students. By providing free access to instructional resources, CALI Reads ensures that all educators, regardless of financial constraints, can benefit from the research-based strategies and practices presented. We encourage anyone interested in supporting adolescent literacy to explore and use the free learning resources available here. </small></p>
  
  <p class="showcase-demo"><small>The CALI Reads project was made possible through a 5-year State Personnel Development Grant awarded to the California Department of Education, Special Education Division, by the Office of Special Education Programs at the U.S. Department of Education. This federal funding demonstrates the commitment to improving literacy and educational opportunities for students in California and beyond. </small></p>
  
