--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,6 +22,8 @@ import cdeImg from '../images/CDE_green-border.png';
     <div >
       <p>
         The contents of this website were developed under a State Personnel Development Grant (SPDG) from the US Department of Education (CALI/Award #H323A170011), Project Officer, david.guardino@ed.gov. However, the contents of this site do not necessarily represent the policy of the US Department of Education and no assumption of endorsement by the Federal government should be made.      </p>
+        
+        <p>If you experience problems with these resources, please <a href="mailto:ttranfaglia@napacoe.org">contact our support team</a></p>
       
     </div>
   </footer>
@@ -43,7 +45,7 @@ import cdeImg from '../images/CDE_green-border.png';
 
 
   .footer a {
-    color: #a741ff;
+    color: #C2DA69;
   }
 
   .footer a:hover {
