--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 import Showcase from '../components/Showcase.astro';
 
-import Features from '../components/Features.astro';
+import NewFeatures from '../components/NewFeatures.astro';
 
 import Footer from '../components/Footer.astro';
 
@@ -26,7 +26,7 @@ import { Icon } from 'astro-icon';
 
       <p>Indeed, the CALI Reads resources will prove to be an invaluable asset to anyone seeking to enhance educational opportunities for students. Whether you are an educator, administrator, or an individual passionate about promoting literacy and educational success, these resources provide a wealth of knowledge, strategies, and tools to support effective instruction.</p>
       
-      <Features />
+      <NewFeatures />
       
        
     </div>
