added cde partner bios

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,8 @@
         <div class="hamburger">
         </div>
       </div>
-     <div id='skip' class='skip'><a class='skip2content' aria-label='skip to contnet' href='content'></a></div>
+     <div id='skip' class='skip'><a class='skip2content' aria-label='skip to contnet' href='content'></a>
+     </div>
       <ul class="nav-list">
         <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href='/index.html#features'>Literacy Strategies</a></li>
@@ -26,6 +27,7 @@
         <li class="nav-item"><a class="nav-link" href="/literacy-modules">E-Learning Courses</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadswebinars" target="_blank">Webinars</a></li>
         <li class="nav-item"><a class="nav-link" href="https://vimeo.com/showcase/calireadsdemonstration" target="_blank">Demonstration Videos</a></li>
+        <li class="nav-item"><a class="nav-link" href="/partners">CDE Partners</a></li>
       </ul>
     </nav>
 
