added context blurb

--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -12,6 +12,7 @@ import Detail from '../components/Detail.astro'
     <section class="page-content">
         <div class="container" id="partners">
           <h2>California Department of Education Partners </h2>
+          <p>CALI Reads was made possible by a State Personnel Development Grant (SPDG) awarded from the Office of Special Education (OSEP), U.S. Department of Education. The SPDG funds were awarded to the California Department of Education, Special Education Division and coordinated and administered in partnership with the Napa County Office of Education.  </p>
             <div>
         
                 <h3>Dr. Theresa Costa Johansen</h3>
